--- a/views/home.html
+++ b/views/home.html
@@ -60,12 +60,23 @@
             <p>Con Mercado Libre Cash, tenés cuotas sin interes con tarjeta o efectivo en puntos de pago.¡Y Siempre es seguro!</p>
             <li><h3>Envio gratis desde $ 2.500</h3></li>
             <p>Solo por estar registrada en Mercado Libre tenés envíos gratis en miles de productos. Es un beneficio de Marcado Puntos.</p>
-            <li><h3>Envio gratis desde $ 2.500</h3></li>
-            <p>Solo por estar registrada en Mercado Libre tenés envíos gratis en miles de productos. Es un beneficio de Marcado Puntos.</p>
             <li><h3>Seguridad, de principio a fin</h3></li>
             <p>¿No te gusta?¡Devolvelo! En MercadoLiebre, no hay nada que no puedas hacer, porque estás siempre protegido.</p>
-            <h3>Copyright c 1999-2020 MarcadoLiebre S.R.L.</h3>
+            <li><h3>Copyright c 1999-2020 MarcadoLiebre S.R.L.</h3></li>
         </ul>
+        <section>
+        <ol> 
+            <h2>Mockup del micro desafio:</h2>
+            <li><h3>Pagá con tarjeta o en efectivo</h3></li>
+            <p>Con MercadoLiebreCash tenés cuotas sin interés con tarjeta o efectivo en puntos de pago.¡Y siempre es segiro!.</p>
+            <li><h3>Envío gratis desde los 2.500</h3></li>
+            <p>Solo por estar registrador en Mercado Liebre tenes envíos gratis en miles de productos. Es un beneficio de Mercado Puntos.</p>
+            <li><h3>Seguridad de princio a fin.</h3></li>
+            <p>¿No te gusta?¡Devolvelo! En MercadoLiebre no hay nada que no puedas hacer porque estás siempre protegida.</p>
+            <p></p>
+            <p>Copyrigth @ 1999-2020 MercadoLiebre S.R.L.</p>
+        </ol>
+        </section>
     </footer>
     
     </body>
