más actidvidad resuelta

--- a/views/home.html
+++ b/views/home.html
@@ -1,6 +1,18 @@
-<html lang="es">  
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bangers&display=swap">
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="/css/styles.css">
+</head>
     <body>
     <header>
+        
         <img src="/images/logo-mercado-liebre.svg" width="360" alt="logo de mercado libre">
         <div> <input type="text" placeholder="Busca aquí"></div>
         <p> Compra en cuotas y sin targeta de crédito </p>
@@ -18,9 +30,10 @@
                 
             </ul>
         </nav>
+
     </header>
     <section>
-        <img src="/images/img-home-banner.jpg" width="360" alt="home banner">
+        <img src="/images/img-home-banner.jpg" width="360" alt="imagen de banner">
     </section>
 
     <main>
@@ -68,16 +81,18 @@
         <ol> 
             <h2>Mockup del micro desafio:</h2>
             <li><h3>Pagá con tarjeta o en efectivo</h3></li>
-            <p>Con MercadoLiebreCash tenés cuotas sin interés con tarjeta o efectivo en puntos de pago.¡Y siempre es segiro!.</p>
+            <p>Con MercadoLiebreCash tenés <strong> cuotas sin interés con tarjeta </strong> o efectivo en puntos de pago.¡Y siempre es segiro!.</p>
             <li><h3>Envío gratis desde los 2.500</h3></li>
             <p>Solo por estar registrador en Mercado Liebre tenes envíos gratis en miles de productos. Es un beneficio de Mercado Puntos.</p>
             <li><h3>Seguridad de princio a fin.</h3></li>
-            <p>¿No te gusta?¡Devolvelo! En MercadoLiebre no hay nada que no puedas hacer porque estás siempre protegida.</p>
+            <p><em>¿No te gusta?</em> ¡Devolvelo! En MercadoLiebre no hay nada que no puedas hacer porque estás siempre protegida.</p>
             <p></p>
-            <p>Copyrigth @ 1999-2020 MercadoLiebre S.R.L.</p>
+            <p class="parrafo-destacado">Copyrigth @ 1999-2020 MercadoLiebre S.R.L.</p>
         </ol>
         </section>
     </footer>
     
     </body>
 </html>
+
+
