--- a/views/home.html
+++ b/views/home.html
@@ -12,10 +12,13 @@
 </head>
     <body>
     <header>
-        
+        <div class="top-header">
+
         <img src="/images/logo-mercado-liebre.svg" width="360" alt="logo de mercado libre">
         <div> <input type="text" placeholder="Busca aquí"></div>
         <p> Compra en cuotas y sin targeta de crédito </p>
+
+    </div>
         <nav>
             <ul>
                 <li>Ofertas</li>
@@ -24,13 +27,27 @@
                 <li>Ayuda</li>
             </ul>
             <ul>
-                <li>Crea tu cuenta</li>
-                <li>Ingresar</li>
-                <li>Mis compras</li>
+                <li>
+                    <a href="">Crea tu cuenta
+                        <i class="far fa-address-card"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="">Ingresar
+                        <i class="far fa-address-card"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="">Mis compras
+                        <i class="far fa-address-card"></i>
+                    </a>
+                </li>
                 
             </ul>
         </nav>
-
+        <button>
+            <i class="https://cssbuttongenerator.com/"></i> 
+        </button>
     </header>
     <section>
         <img src="/images/img-home-banner.jpg" width="360" alt="imagen de banner">
